--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^2.2.33"
   },
   "devDependencies": {
+    "array-equal": "^1.0.0",
     "assert": "^1.4.1",
     "mocha": "^4.0.1"
   }
